Fix #106966: Resiter undo-step when unlinking data-block

When unlinking IDs like GN tree, materials undo step is not created.
To fix this, assign `undo_push_label` a string value for registering an
undo-step (with the help of `ED_undo_push`)